--- a/inicio/index.html
+++ b/inicio/index.html
@@ -18,9 +18,9 @@
 
         <nav>
 
-        <a href="#">DiaDia</a>
-        <a href="#">Classíco</a>
-        <a href="#">Elegante</a>
+        <a href="https://inaldofilho.github.io/perfumes/diadia/">DiaDia</a>
+        <a href="https://inaldofilho.github.io/perfumes/classico/">Classíco</a>
+        <a href="https://inaldofilho.github.io/perfumes/elegante/">Elegante</a>
         <a href="#">Promoção</a>
 
 
@@ -104,7 +104,7 @@
 
         </div>
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15756.202349248933!2d-36.0178558!3d-9.1499041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7072945f86f29b1%3A0xec869d6060b387a9!2sNova%20Esperan%C3%A7a%20-%20Uni%C3%A3o%20dos%20Palmares%2C%20AL%2C%2057800-000!5e0!3m2!1spt-BR!2sbr!4v1696182988305!5m2!1spt-BR!2sbr" width="420px" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15756.202349248933!2d-36.0178558!3d-9.1499041!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x7072945f86f29b1%3A0xec869d6060b387a9!2sNova%20Esperan%C3%A7a%20-%20Uni%C3%A3o%20dos%20Palmares%2C%20AL%2C%2057800-000!5e0!3m2!1spt-BR!2sbr!4v1696182988305!5m2!1spt-BR!2sbr"  style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 
         
