--- a/inicio/index.html
+++ b/inicio/index.html
@@ -66,8 +66,9 @@
 
 
         <figure>
+            
         <img src="./imagens/p-1.jpg" alt="">
-        <figcaption>Produtos Link Abaixo</figcaption>
+        <figcaption>Produtos Link abaixo</figcaption>
         
         <a href="#">  Dia a Dia</a>
         </figure>
