--- a/diadia/index.html
+++ b/diadia/index.html
@@ -15,14 +15,14 @@
     <header>
         <img class="logo" src="./imagens/logo.png" alt="">
 
-        <p>Perfumes que vão atender sua necessidade e deixar você pronto para o seu compromisso deixando voê com uma fragância especial e que vai caber no seu bolso.
+        <p>Perfumes que vão atender sua necessidade e deixar você pronto para o seu compromisso deixando você com uma fragância especial e que vai caber no seu bolso.
         </p>
 
         <nav>
 
-            <a href="#">Elegante</a>
-            <a href="#">Classíco</a>
-            <a href="#">Home</a>
+            <a href="https://inaldofilho.github.io/perfumes/elegante/">Elegante</a>
+            <a href="https://inaldofilho.github.io/perfumes/classico/">Classíco</a>
+            <a href="https://inaldofilho.github.io/perfumes/inicio/">Home</a>
             <a href="#">Promoção</a>
     
     
