--- a/diadia/index.html
+++ b/diadia/index.html
@@ -34,7 +34,7 @@
     <main>
         <h2>Dia a Dia </h2>
       
-        <video src="imagens/video.mp4"></video>
+        <video src="imagens/video.mp4" controls></video>
 
     </main>
 
@@ -80,7 +80,7 @@
         <h3>Avon</h3>
         <img src="./imagens/essencial-hot.webp" alt="">
         <p> <strong> Perfume </strong> <br>
-        Essencial Hot <br>
+        Black Hot <br>
         R$ 54,00
         </p>
         <a href="#">Comprar</a>
@@ -94,7 +94,7 @@
         <h3>Avon</h3>
         <img src="./imagens/essential-dark.webp" alt="">
         <p> <strong> Perfume </strong> <br>
-        Essencial Dark <br>
+        Black Dark <br>
         R$ 53,00
         </p>
         <a href="#">Comprar</a>
@@ -106,7 +106,7 @@
         <h3>Avon</h3>
         <img src="./imagens/back essencial.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
-        Essencial Intense <br>
+        Black Intense <br>
         R$ 54,00
         </p>
         <a href="#">Comprar</a>
@@ -127,7 +127,7 @@
     </div>
 
     <div>
-        <h3>Natura homem</h3>
+        <h3>Natura </h3>
         <img src="./imagens/humor verde.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
         Humor Rigor <br>
@@ -139,7 +139,7 @@
     </div>
 
     <div>
-        <h3>Natura homem</h3>
+        <h3>Natura </h3>
         <img src="./imagens/kaiak-oceano.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
         Kaiak Oceano <br>
@@ -163,7 +163,7 @@
     </div>
 
     <div>
-        <h3>Natura homem</h3>
+        <h3>Natura </h3>
         <img src="./imagens/kaiak-pulso.jfif" alt="">
         <p> <strong> Perfume </strong> <br>
         Kaiak Pulso <br>
@@ -187,7 +187,7 @@
         </div>
 
         <div>
-            <h3>Natura homem</h3>
+            <h3>Natura </h3>
             <img src="./imagens/musk-intense.jpg" alt="">
             <p> <strong> Perfume </strong> <br>
             Musk Intense <br>
