--- a/classico/index.html
+++ b/classico/index.html
@@ -20,9 +20,9 @@
 
         <nav>
 
-            <a href="#">DiaDia</a>
-            <a href="#">Elegante</a>
-            <a href="#">Home</a>
+            <a href="https://inaldofilho.github.io/perfumes/diadia/">DiaDia</a>
+            <a href="https://inaldofilho.github.io/perfumes/elegante/">Elegante</a>
+            <a href="https://inaldofilho.github.io/perfumes/inicio/">Home</a>
             <a href="#">Promoção</a>
     
     
