--- a/diadia/index.html
+++ b/diadia/index.html
@@ -118,7 +118,7 @@
         <h3>Avon</h3>
         <img src="./imagens/exclusive-black.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
-         Exclusive Black <br>
+         Exclusive  <br>
         R$ 72,00
         </p>
         <a href="#">Comprar</a>
