--- a/classico/index.html
+++ b/classico/index.html
@@ -45,7 +45,7 @@
         <h3>Hinode </h3>
         <img src="./imagens/lattitude-adventure.png" alt="">
         <p> <strong> Perfume </strong>  <br>
-         lattitude adventure  <br>
+         lattitude Verde  <br>
         <strong class="preço">  R$ 75,00 </strong> <br>
         </p>
         <a href="#">Comprar</a>
@@ -178,7 +178,7 @@
             <h3>Hinode</h3>
             <img src="./imagens/lattitude-expedition.jpg" alt="">
             <p> <strong> Perfume </strong> <br>
-            Lattitude Expedição<br>
+            Lattitude Marrom<br>
             <strong class="preço">  R$ 102,00 </strong>
             </p>
             <a href="#">Comprar</a>
@@ -190,7 +190,7 @@
             <h3>Avon</h3>
             <img src="./imagens/absolute-by.jpg" alt="">
             <p> <strong> Perfume </strong> <br>
-            Exclusive Absolut <br>
+            Exclusive gold <br>
             <strong class="preço">  R$ 105,00 </strong>
             </p>
             <a href="#">Comprar</a>
@@ -202,7 +202,7 @@
             <h3>Hinode</h3>
             <img src="./imagens/lattitude-stamina.jpg" alt="">
             <p> <strong> Perfume </strong> <br>
-            Lattitude Stamina <br>
+            Lattitude Preto <br>
             <strong class="preço">  R$ 88,00 </strong>
             </p>
             <a href="#">Comprar</a>
