--- a/elegante/index.html
+++ b/elegante/index.html
@@ -57,7 +57,7 @@
         <h3>Natura</h3>
         <img src="./imagens/essencial-exclusivo.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
-            Essencial Exclusivo <br>
+            Essencial Black <br>
             <strong class="preço">  R$ 170,00 </strong>
         </p>
         <a href="#">Comprar</a>
@@ -79,7 +79,7 @@
         <h3>Natura</h3>
         <img src="./imagens/essencial-supremo.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
-        Essencial Supremo<br>
+        Essencial Red<br>
         <strong class="preço">  R$ 185,00 </strong>
         </p>
         <a href="#">Comprar</a>
@@ -129,7 +129,7 @@
         <h3>Oboticaro </h3>
         <img src="./imagens/malbec-tradicional.jpg" alt="">
         <p> <strong> Perfume </strong> <br>
-        Malbec Tradicional<br>
+        Malbec Tradição<br>
         <strong class="preço">  R$ 122,00 </strong>
         </p>
         <a href="#">Comprar</a>
@@ -201,7 +201,7 @@
             <h3>Oboticaro</h3>
             <img src="./imagens/uomini-tradicional.webp" alt="">
             <p> <strong> Perfume </strong> <br>
-            Uomini tradiconal <br>
+            Uomini Tradição <br>
             <strong class="preço">  R$ 160,00 </strong>
             </p>
             <a href="#">Comprar</a>
