atualização da segunda ok

--- a/elegante/index.html
+++ b/elegante/index.html
@@ -27,7 +27,7 @@
     
          </nav>
 
-        <li> Entregamos em até 1 hora na sua residência frete-grátis</li>
+        <li> Entregamos em até 1 hora na sua residência frete grátis, Desconto de 5% no Pix ou avista.</li>
 
         </header>
     <main>
