--- a/diadia/index.html
+++ b/diadia/index.html
@@ -28,7 +28,7 @@
     
          </nav>
 
-        <li> Entregamos em até 1 hora na sua residência</li>
+        <li>Entregamos em até 1 hora na sua residência frete grátis, Desconto de 5% no Pix ou avista. </li>
 
         </header>
     <main>
