--- a/classico/index.html
+++ b/classico/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Alpha Men : Dia a Dia</title>
+    <title>Alpha Men : Classíco</title>
    <link rel="shortcut icon" href="./imagens/logo.png" type="image/x-icon">
    <link rel="stylesheet" href="style.css">
 
@@ -178,7 +178,7 @@
             <h3>Hinode</h3>
             <img src="./imagens/lattitude-expedition.jpg" alt="">
             <p> <strong> Perfume </strong> <br>
-            Lattitude Marrom<br>
+            Latitude Marrom<br>
             <strong class="preço">  R$ 102,00 </strong>
             </p>
             <a href="#">Comprar</a>
