--- a/diadia/index.html
+++ b/diadia/index.html
@@ -23,7 +23,7 @@
             <a href="https://inaldofilho.github.io/perfumes/elegante/">Elegante</a>
             <a href="https://inaldofilho.github.io/perfumes/classico/">Classíco</a>
             <a href="https://inaldofilho.github.io/perfumes/inicio/">Home</a>
-            <a href="#">Promoção</a>
+            <a href="https://inaldofilho.github.io/perfumes/promo%C3%A7ao/">Promoção</a>
     
     
          </nav>
