--- a/elegante/index.html
+++ b/elegante/index.html
@@ -22,7 +22,7 @@
             <a href="https://inaldofilho.github.io/perfumes/diadia/">DiaDia</a>
             <a href="https://inaldofilho.github.io/perfumes/classico/">Classíco</a>
             <a href="https://inaldofilho.github.io/perfumes/inicio/">Home</a>
-            <a href="#">Promoção</a>
+            <a href="https://inaldofilho.github.io/perfumes/promo%C3%A7ao/">Promoção</a>
     
     
          </nav>
@@ -44,7 +44,7 @@
         <h3>Natura </h3>
         <img src="./imagens/essencial-deo-parfam.jfif" alt="">
         <p> <strong> Perfume </strong>  <br>
-         Essencial Parfam <br>
+         Essencial Gold <br>
         <strong class="preço">  R$ 175,00 </strong> <br>
         </p>
         <a href="#">Comprar</a>
