--- a/inicio/index.html
+++ b/inicio/index.html
@@ -21,7 +21,7 @@
         <a href="https://inaldofilho.github.io/perfumes/diadia/">DiaDia</a>
         <a href="https://inaldofilho.github.io/perfumes/classico/">Classíco</a>
         <a href="https://inaldofilho.github.io/perfumes/elegante/">Elegante</a>
-        <a href="#">Promoção</a>
+        <a href="https://inaldofilho.github.io/perfumes/promo%C3%A7ao/">Promoção</a>
 
 
         </nav>
